1.9.3:
* Client/WebUI/MakeTx: Address Book shows auto calculated P2SH-WPKH Addresses from currently selected wallet
* Client: Show real endpoint's TCP port for incomming connections
* Client: Run Tick() method for each peer not more often than each 100 ms
* Client: Run SendInvs() method for each peer not more often each 10 ms
* Client: Increased size of each peer's send buffer to 16MB (so it can handle 8MB blocks)
* Client/TextUI: New command "unban"
* Client: Removed NO_DATA timeout and added NoVersionMessage timeout
* Client: Introduced a concept of "special" peers that get more debugging and never get dropped
* Lib: The best chain is now decided on the amount of POW, not the height anymore
* WebUI/Network: New option "Connect Peer", to connect to a peer with the given IP[:port]
* Lib: CheckTransactions now returns descriptive errors (e.g. "bad-txns-vin-empty")
* Client: Added 2x bigger block consensus change warning (segwit2x)
* Client/WebUI/Net: New "Freeze stats" option and manual refresh buttons
* Wallet: disallow uncompressed keys, for WPKH segwit address safety
* Client: Ignore the value of MAX_GETDATA_FORWARD when there are no blocks in progress
* MarshalText() method madded to "sys.SyncBool" and "sys.SyncInt" (fixes WebUI issue)
* From block #494784 onward, allow twice bigger blocks on mainnet (segwit2x)
* Got rid of btc.MAX_BLOCK_SIZE (replaced it with btc.MAX_BLOCK_WEIGHT)
* Lib: New "utils.GetUnspent()" function to fetch a balance from "blockexplorer.com" or "blockchain.info"
* Tools/BalIO: Remade to use blockexplorer.com since blockr.io isn't working any more
* Client/WebUI/Blocks: Show fee statistics in relation to transactions' weight, not the size
* Client: NetRouteInv() was only routing txs to peers which don't use "feefilter"
* Wallet: decode transaction also shows WTxID now
* Lib: calculates weight of blocks and checks it against "btc.MAX_BLOCK_WEIGHT"

1.9.2 - 2017-09-30
* Minor performance improvements in "lib/secp256k1"